<resources>
    <string name="app_name">TaskManager</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save">save</string>
    <string name="task">Task</string>
    <string name="error_title">Это обязательное поле</string>
    <string name="skip">Skip</string>
    <string name="get_started">get started</string>
    <string name="title2">Title</string>
    <string name="age">Age</string>
    <string name="input_your_phone_number">Input your phone number</string>
    <string name="send_sms">Send SMS</string>
</resources>