<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="task.manager.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="task.manager.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="task.manager.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="task.manager.ui.profile.ProfileFragment"
        android:label="fragment_profile2"
        tools:layout="@layout/fragment_profile2" />
    <fragment
        android:id="@+id/taskFragment"
        android:name="task.manager.ui.task.TaskFragment"
        android:label="@string/task"
        tools:layout="@layout/fragment_task" />
    <fragment
        android:id="@+id/onBoardingFragment"
        android:name="task.manager.ui.onBoarding.OnBoardingFragment"
        android:label="fragment_on_boarding"
        tools:layout="@layout/fragment_on_boarding" />
</navigation>