<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    tools:context=".ui.task.TaskFragment"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="16dp"
        android:id="@+id/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:hint="@string/title" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_desc"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:hint="@string/description" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:id="@+id/btn_save"
        android:text="@string/save"
        android:backgroundTint="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</LinearLayout>